Add scoreboard, shuffle, and update Card component
Update Card component to dynamically fetch data from given a query id
Create generateNewCards function to randomize cards array
Create shuffle function to randomize order of cards in DOM
Create scoreboard to keep track of current and high score

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,12 @@
   max-width: 450px;
   flex-wrap: wrap;
 }
+
+.card {
+  display: inline-block;
+  min-width: 98px;
+}
+
+img {
+  float: left;
+}
